Add the Java Beagle baseline to the sequence-scale benchmark
Java Beagle 5.5 on the same panel and machine: 2.6-2.9x slower for
imputation and 1.8-2.1x for phasing + imputation. The memory ratio narrows
from ~5x to ~1.3x as the cohort grows, since per-target-haplotype state
comes to dominate both programs.

The 1,600-animal Java runs sit against their -Xmx12g cap, so the numbers
carry what that costs rather than a guess about it: stop-the-world pauses
are 8.6% and 6.7% of wall time with no full GCs, and re-running at
-Xmx12800m was slightly slower, not faster. GC-free the speedups would be
2.7x and 1.8x.

Batch size is where the memory gap actually bites: rusty-beagle imputes a
2,000-animal batch at 12.94 GB, while Java at -Xmx13g is OOM-killed in the
first window of the same batch on the same 16 GB machine, so it needs more
batches and re-reads the reference for each one.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01T9fUMTysbButY6LE42nafF